--- a/limma_tutorial.Rmd
+++ b/limma_tutorial.Rmd
@@ -533,13 +533,45 @@ A classic example for this situation is the experimental designs where we have t
 
 **Factor2: Treatments**
 
-- Mono
+- Mono (baseline treatment)
 - K48
 - K63
 
-For each condition, we have expression log ratios that are relative to a common reference or denominator (in this case 'control')
+For each condition, we have expression log ratios that are relative to a common reference or denominator (in this case 'control').
 
-## Extract expression raios from the data matrix
+**Note that we are interested in whether K48 or K63 treatments are changing any genes beyond the mono, and whether this reponse is different in Mutant cells compared to Wild-type.**
+
+## Define questions of interest
+
+Questions of interest always come first. This is particularly critical for factorial design, since the final model will be quite complex. We need to set up the questions upfront in order to fit and test the relevant contrasts from our model.
+
+In this experiment, the relevant questions could be:
+
+1. Which genes respond to a given treatment in Wt cells?
+2. Which genes respond to a given treatment in Mutant cells?
+3. Which genes **respond differently** to a given treatment  
+
+
+## Prepare the data.column - experiment.class match table (Annotation table or Target matrix)
+
+This is a table we need to prepare to clearly tabulate the relevant data columns in the data matrix, with respect to the classes they belong to. This can be prepared in an R environment or externally using excel and then imported into the R session like I did here.
+
+Read and look at the structure of the table:
+
+```{r}
+annotations <- read.csv("annotations.csv", stringsAsFactors = TRUE)
+annotations
+```
+
+The table is intuitively constructed. In limma, this table is also called as "target matrix", this is the main matrix we use to construct the design matrix.
+
+From this target matrix we can understand that there are 12 samples in total. Each Strain class is represented by 3 treatments and each of them have 2 **independent** biological replicates.
+
+This **independence** is important because, if we have resampled from the same individual (Wild-type or Mutant), we had to take into account the correlation between the observations. This would necessiate using mixed effect models. 
+
+## Set the factor levels correctly to define reference levels
+
+It is especially important to define the factor levels correctly based 
 
 
 
