--- a/limma_tutorial.Rmd
+++ b/limma_tutorial.Rmd
@@ -631,7 +631,7 @@ As we notice from the design matrix we have:
 
 Note that the intercept represents the mean logFC for a gene in the both reference categories, which is TreatmentMono.StrainWt. All other coefficients are relative to this term.
 
-Before going into the details of the model, we need one edit in the column names. The colon (:) in the interaction term names needs to be replaced. This is because the downstream function make.contrasts() can not handle these types of special charecters in column names.
+**Before going into the details of the model, we need one edit in the column names. The colon (:) in the interaction term names needs to be replaced. This is because the downstream function make.contrasts() can not handle these types of special charecters in column names.**
 
 We replace ":" by "." in the column names of the design matrix:
 
@@ -656,15 +656,15 @@ As always, writing down the equation is critical. Here we have the following mod
 
 Log Exp Ratio = B0 + B1 * K63 + B2 * K48
                    + B3 * Mut
-                   + B4 * K63.Mut + K48.Mut
+                   + B4 * K63.Mut + B5 * K48.Mut
                    
-where;
+where the **invisible** categorical variables are:
 
 - K63 = 1 when the treatment is K63 and 0 otherwise
 - K48 = 1 when the treatment is K48 and 0 otherwise
 - Mut = 1 when the strain is Mutant and 0 if it is Wild-type
                    
-In our encoded model (design matrix) the coefficients are represented as:
+In our encoded model (design matrix) the coefficients are nicknamed as:
 
 - B0: (Intercept)
 - B1: TreatmentK63
@@ -676,11 +676,61 @@ In our encoded model (design matrix) the coefficients are represented as:
 These coefficients have their own interpretations:
 
 - **B0: (Intercept):** mean logFC in the TreatmentMono and StrainWt 
-- **B1: TreatmentK63:** mean logFC difference of [TreatmentK63 - TreatmentMono] in StrainWt (TreatmentK63 effect in the Wt strain)  
-- **B2: TreatmentK48:** mean logFC difference of [TreatmentK48 - TreatmentMono] in StrainWt (TreatmentK48 effect in the Wt strain)
-- **B3: StrainMut:** mean logFC difference of [StrainMut - StrainWt] under TreatmentMono condition (strain effect at the baseline treatment level)
-- **B4: TreatmentK63.StrainMut:** mean logFC difference of 
-- **B5: TreatmentK48.StrainMut:** mean logFC difference of 
+- **B1: TreatmentK63:** mean logFC difference of [TreatmentK63 - TreatmentMono] in StrainWt (i.e: TreatmentK63 effect in the Wt strain)  
+- **B2: TreatmentK48:** mean logFC difference of [TreatmentK48 - TreatmentMono] in StrainWt (i.e: TreatmentK48 effect in the Wt strain)
+- **B3: StrainMut:** mean logFC difference of [StrainMut - StrainWt] under TreatmentMono condition (i.e: strain effect at the baseline treatment level)
+- **B4: TreatmentK63.StrainMut:** mean logFC difference of ([TreatmentK63 - TreatmentMono] in  StrainMut) - ([TreatmentK63 - TreatmentMono] in  StrainWt)
+- **B5: TreatmentK48.StrainMut:** mean logFC difference of ([TreatmentK48 - TreatmentMono] in  StrainMut) - ([TreatmentK48 - TreatmentMono] in  StrainWt)
 
 Note that not all of the questions we are interested in are directly available from the model coefficients. This doesn't mean we can not construct the contrasts we are interested in. We will derive these contrasts to fit exactly the questions we are interested in. The model coefficients and their interpretation we already described will become handy during these operations.
 
+## Define the desired contrasts in model terms
+
+This is the critical part. We need to recall our questions and **associated null hypotheses(H0)** to fit construct the relevant contrasts.
+
+Remember our model and categorical variables:
+
+Log Exp Ratio = B0 + B1 * K63 + B2 * K48
+                   + B3 * Mut
+                   + B4 * K63.Mut + B5 * K48.Mut
+                   
+where the **invisible** categorical variables are:
+
+- K63 = 1 when the treatment is K63 and 0 otherwise
+- K48 = 1 when the treatment is K48 and 0 otherwise
+- Mut = 1 when the strain is Mutant and 0 if it is Wild-type
+
+Questions we seek answers:
+
+**1. Which genes respond to a given treatment in Wt cells?** 
+
+Null hypotheses:
+
+- H0: Mean.WT.K48 - Mean.WT.mono = 0 ,or we can write: Mean.Wt.K48.vs.Mono = 0
+- H0: Mean.WT.K63 - Mean.WT.mono = 0 ,or we can write: Mean.Wt.K63.vs.Mono = 0
+
+Using the coefficients, these differences are represented as:
+
+- Mean.Wt.K48.vs.Mono = B0 + B2 - B0 = B2
+- Mean.Wt.K63.vs.Mono = B0 + B1 - B0 = B1
+
+In terms of the nicknames in our model, we can re-write:
+
+- Mean.Wt.K48.vs.Mono = TreatmentK48
+- Mean.Wt.K63.vs.Mono = TreatmentK63
+
+These will be the basis for our relevant contrasts.
+
+
+2. Which genes respond to a given treatment in Mutant cells? 
+
+
+(**Relates to: Mut.K48 vs Mut.mono, Mut.K63 vs Mut.mono comparisons, two seperate comparisons**)
+3. Which genes **respond differently** to a given treatment in mutant compared to wild-type cells? (**Relates to the difference of differences**: 
+
+- For K48 treatment: [Mut.K48 - Mut.mono] - [WT.K48 - WT.mono]
+- For K63 treatment: [Mut.K63 - Mut.mono] - [WT.K63 - WT.mono]
+
+Both of these contrasts will be represented as **interaction terms** in our model.
+
+ )  
